package dataControllerUtils.protobuf;

import "dataControllerUtils/Timestamp.proto";

message TimeInterval {
extensions 3 to 103;
    optional Timestamp lowerTs = 1;
    optional Timestamp upperTs = 2;
}
